dealing with modules with no unqualified exports